output3.log
  File "/home/runner/work/Python-Actions.FindMind/Python-Actions.FindMind/create_holiday.py", line 114
    print(f"缺失日期已儲存至 {missing_dates_
                                                    ^
SyntaxError: EOL while scanning string literal
